<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/food_textView_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/food_textView_1"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/food_radioGroup_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/food_textView_1">

        <RadioButton
            android:id="@+id/food_radioButton_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/food_radioButton_1" />

        <RadioButton
            android:id="@+id/food_radioButton_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_radioButton_2" />

        <RadioButton
            android:id="@+id/food_radioButton_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_radioButton_3" />

        <RadioButton
            android:id="@+id/food_radioButton_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_radioButton_4" />

    </RadioGroup>

    <Button
        android:id="@+id/food_button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:text="@string/food_button_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/food_radioGroup_1" />

</androidx.constraintlayout.widget.ConstraintLayout>